# MilkWidgetCore

./: README.md
MilkWidgetCore/: CMakeLists.txt  README.md
MilkWidgetCore/examples/: CMakeLists.txt
MilkWidgetCore/examples/configs/: system_monitor.xml
MilkWidgetCore/examples/system_monitor/: main.cpp
MilkWidgetCore/examples/xml_demo/: main.cpp
MilkWidgetCore/include/milk/: APIs.h  Application.h  MilkWidget.h  Parsers.h  Types.h  Utils.h  Widget.h  Widgets.h
MilkWidgetCore/src/: main_cli.cpp
MilkWidgetCore/src/apis/: APIs.cpp  SystemMonitor.cpp
MilkWidgetCore/src/core/: Application.cpp  Widget.cpp
MilkWidgetCore/src/parsers/: CSSParser.cpp  XMLParser.cpp
MilkWidgetCore/src/utils/: Utils.cpp
MilkWidgetCore/src/widgets/: Widgets.cpp
